adição das transições nas imagens

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
-        <img src="img/marvel-logo-0.png" width="100" height="50" class="logo">
+        <div class="logo-zoom">
+            <img src="img/marvel-logo-0.png" width="100" height="50" class="logo">
+        </div>
         <h1>Portal Marvel</h1>
         <nav>
             <ul>
