--- a/sobre.html
+++ b/sobre.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
-        <img src="img/marvel-logo-0.png" width="100" height="50" class="logo">
+        <div class="logo-zoom">
+            <img src="img/marvel-logo-0.png" width="100" height="50" class="logo">
+        </div>
         <h1>Sobre Mim</h1>
         <nav>
             <ul>
@@ -18,8 +20,9 @@
         </nav>
     </header>
     <main>
+        <img src="img/eu img.jpg">
         <div class="info-box">
-            <p>Este site foi desenvolvido como parte de uma atividade prática do curso Técnico em Desenvolvimento de Sistemas. O objetivo deste projeto é aplicar os conhecimentos adquiridos ao longo do curso, incluindo a criação de páginas web, estilização com CSS, e utilização de conceitos de lógica de programação. Através deste site, busco explorar o universo Marvel e compartilhar informações com outros fãs, enquanto desenvolvo minhas habilidades técnicas.
+            <p>Este site foi desenvolvido por mim, Enzo Alves Turcovic como parte de uma atividade prática do curso Técnico em Desenvolvimento de Sistemas. O objetivo deste projeto é aplicar os conhecimentos adquiridos ao longo do curso, incluindo a criação de páginas web, estilização com CSS, e utilização de conceitos de lógica de programação. Através deste site, busco explorar o universo Marvel e compartilhar informações com outros fãs, enquanto desenvolvo minhas habilidades técnicas.
         </p>
     </div>
     </main>
