--- a/contato.html
+++ b/contato.html
@@ -8,7 +8,9 @@
 </head>
 <body class="body-contato">
     <header>
-        <img src="img/marvel-logo-0.png" width="100" height="50" class="logo">
+        <div class="logo-zoom">
+            <img src="img/marvel-logo-0.png" width="100" height="50" class="logo">
+        </div>
         <h1>Contato</h1>
         <nav>
             <ul>
