adição da imagem na página sobre

--- a/sobre.html
+++ b/sobre.html
@@ -20,11 +20,10 @@
         </nav>
     </header>
     <main>
-        <img src="img/eu img.jpg">
+        <img src="img/euperfil2.jpg" class="sobreperfil">
         <div class="info-box">
-            <p>Este site foi desenvolvido por mim, Enzo Alves Turcovic como parte de uma atividade prática do curso Técnico em Desenvolvimento de Sistemas. O objetivo deste projeto é aplicar os conhecimentos adquiridos ao longo do curso, incluindo a criação de páginas web, estilização com CSS, e utilização de conceitos de lógica de programação. Através deste site, busco explorar o universo Marvel e compartilhar informações com outros fãs, enquanto desenvolvo minhas habilidades técnicas.
-        </p>
-    </div>
+            <p>Este site foi desenvolvido por mim, Enzo Alves Turcovic como parte de uma atividade prática do curso Técnico em Desenvolvimento de Sistemas. O objetivo deste projeto é aplicar os conhecimentos adquiridos ao longo do curso, incluindo a criação de páginas web, estilização com CSS, e utilização de conceitos de lógica de programação. Através deste site, busco explorar o universo Marvel e compartilhar informações com outros fãs, enquanto desenvolvo minhas habilidades técnicas.</p>
+        </div>
     </main>
     <footer>
         <p>&copy; 2024 Portal Marvel - Enzo Alves Turcovic. Todos os direitos reservados.</p>
