alteração de alguns detalhes css

--- a/contato.html
+++ b/contato.html
@@ -20,6 +20,10 @@
         </nav>
     </header>
     <main>
+        <div class="info-boxcontato">
+            <p><h4> Esta seção é dedicada para você que deseja entrar em contato. Se tiver alguma dúvida, sugestão ou quiser saber mais sobre nossos heróis, estamos à disposição. Preencha o formulário abaixo, e retornaremos o mais rápido possível!</h4></p>
+        </div>
+
         <div class="info-box">
             <form action="#" method="post">
             <label for="name">Nome:</label>
